# subio

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
src/io/: mod.rs  read.rs  write.rs
