[package]
name = "subio"
version = "0.2.0"
edition = "2024"
authors = ["Chris Barnes <chrislloydbarnes@gmail.com>"]
description = "Read, write, and seek within a portion of a file as if it were itself a standalone file."
license = "MIT"
keywords = ["io", "read", "write", "seek", "subfile"]
categories = ["filesystem", "data-structures"]
repository = "https://github.com/clbarnes/subio"
rust-version = "1.85"
